--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
         "nonce": "*",
         "redis": "^0.12.1",
         "request": "2.69.0",
-        "stratum-pool": "git://github.com/zone117x/node-stratum-pool.git"
+        "stratum-pool": "git://github.com/zone117x/node-stratum-pool.git",
+        "winston": "^3.0.0-rc5"
     },
     "engines": {
         "node": ">=0.10"
