--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
         "body-parser": "^1.18.3",
         "colors": "*",
         "compression": "*",
+        "cron": "^1.3.0",
         "dateformat": "1.0.12",
         "dot": "*",
         "express": "^4.16.3",
         "express-handlebars": "^3.0.0",
         "extend": "*",
         "js-meter": "^1.1.2",
+        "moment": "^2.22.1",
         "mysql": "*",
+        "node-cron": "^1.2.1",
         "node-json-minify": "*",
         "node-watch": "*",
         "nonce": "*",
