--- a/config.json
+++ b/config.json
@@ -25,7 +25,7 @@
         },
         "redis": {
             "host": "127.0.0.1",
-            "port": 6777
+            "port": "6777"
         }
     },
     "website": {
